Refactor and enhance various components for improved stability and functionality
- Updated `AuthenticListeners` to handle null user cases more gracefully.
- Modified `LoginTryListener` to correctly sum login attempts.
- Enhanced `FastLoginSQLMigrateReadProvider` and `JPremiumSQLMigrateReadProvider` to check for null values before processing.
- Updated `AuthenticPremiumProvider` to use URI for API calls instead of URL.
- Added null checks in `AuthenticServerHandler` for server registration.
- Improved `PaperLibreLoginNext` to check for proxy configurations with a new method.
- Refactored `PaperListeners` to handle deprecated events and attributes.
- Updated `VelocityBootstrap` to initialize PacketEvents correctly.
- Introduced `PacketEventsImageProjector` for QR code rendering using PacketEvents.
- Updated `bungee.yml` to reflect the transition from Protocolize to PacketEvents.